k8s/staging/service.yml
apiVersion: v1
kind: Service
metadata:
  #Service name
  name: sample-api-svc
spec:
  selector:
    app: google-project-id
  ports:
    - protocol: TCP
      port: 8080 
      targetPort: 3000
  type: NodePort
